Add main content sections to index.html and create partials for each section

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,21 @@
   <body>
     <load src="./partials/header.html" />
 
-    <main></main>
+    <main>
+      <load src="./partials/hero.html" />
+      <load src="./partials/pizza-rush.html" />
+      <load src="./partials/features.html" />
+      <load src="./partials/how-to.html" />
+      <load src="./partials/game-mode.html" />
+      <load src="./partials/why-love.html" />
+      <load src="./partials/upgrade.html" />
+      <load src="./partials/tips.html" />
+      <load src="./partials/reviews.html" />
+      <load src="./partials/community.html" />
+      <load src="./partials/technical-details.html" />
+      <load src="./partials/do-you-have.html" />
+      <load src="./partials/contact.html" />
+    </main>
 
     <load src="./partials/footer.html" />
 
