Add header functionality, new sections, and SVG sprite icons
- Implemented burger menu toggle functionality in header.js
- Imported header.js in main.js
- Created new HTML sections: About, Game Info, Game Modes, How To Play, Play Now, Upgrades, and Why You'll Love It
- Added SVG sprite icons for social media and other UI elements

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500..700&family=Inter:opsz,wght@14..32,400;500;700&family=Nunito&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:opsz,wght@14..32,100..900&family=Nunito:wght@200..1000&display=swap"
       rel="stylesheet"
     />
     <title>Pizza Rush</title>
@@ -23,22 +23,22 @@
 
     <main>
       <load src="./partials/hero.html" />
-      <load src="./partials/pizza-rush.html" />
+      <load src="./partials/about.html" />
       <load src="./partials/features.html" />
-      <load src="./partials/how-to.html" />
-      <load src="./partials/game-mode.html" />
-      <load src="./partials/why-love.html" />
-      <load src="./partials/upgrade.html" />
+      <load src="./partials/how-to-play.html" />
+      <load src="./partials/game-modes.html" />
+      <load src="./partials/why-youll-love-it.html" />
+      <load src="./partials/upgrades.html" />
       <load src="./partials/tips.html" />
       <load src="./partials/reviews.html" />
       <load src="./partials/community.html" />
-      <load src="./partials/technical-details.html" />
-      <load src="./partials/do-you-have.html" />
+      <load src="./partials/game-info.html" />
+      <load src="./partials/play-now.html" />
       <load src="./partials/contact.html" />
     </main>
 
     <load src="./partials/footer.html" />
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
