Created animated Pizza for features section

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <main>
       <load src="./partials/hero.html" />
       <load src="./partials/about.html" />
-      <!-- <load src="./partials/features.html" /> -->
+      <load src="./partials/features.html" />
       <load src="./partials/how-to-play.html" />
       <load src="./partials/game-modes.html" />
       <load src="./partials/why-youll-love-it.html" />
