--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <title>Pizza Rush</title>
-    <link rel="stylesheet" rel="preload" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
