--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <load src="./partials/header.html" />
 
     <main>
+      <load src="./partials/mobile-menu.html" />
       <load src="./partials/hero.html" />
       <load src="./partials/about.html" />
       <load src="./partials/features.html" />
