Create Game modes and Why you love it sections

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,19 @@
       href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:opsz,wght@14..32,100..900&family=Nunito:wght@200..1000&display=swap"
       rel="stylesheet"
     />
-    <title>Pizza Rush</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <title>Pizza Rush – Fast-Paced Pizza Making Game</title>
+    <meta name="title" content="Pizza Rush – Fast-Paced Pizza Making Game" />
+    <meta
+      name="description"
+      content="Join the high-speed chaos of Pizza Rush – the ultimate pizza delivery and kitchen strategy game. Serve, upgrade, and conquer the rush."
+    />
+    <meta
+      name="keywords"
+      content="pizza rush, pizza game, cooking game, fast-paced kitchen game, mobile pizza game, food service game, arcade restaurant game, RushPulse Games"
+    />
+    <meta name="author" content="RushPulse Games" />
+    <meta name="robots" content="index, follow" />
   </head>
 
   <body>
