--- a/src/cookies.html
+++ b/src/cookies.html
@@ -51,14 +51,15 @@
           </p>
           <ul class="policy-text-list">
             <li class="policy-text-item">
-              1. What Are Cookies? Cookies are small text files stored on your
-              device when you visit a website. They help websites function
+              1. What Are Cookies? <br />Cookies are small text files stored on
+              your device when you visit a website. They help websites function
               properly, remember preferences, and collect analytical data.
             </li>
           </ul>
           <ul class="policy-text-list">
             <li class="policy-text-item">
-              2. How We Use Cookies We use cookies to:
+              2. How We Use Cookies<br />
+              We use cookies to:
               <ul class="policy-text-sublist">
                 <li class="policy-text-subitem">
                   Ensure the website functions correctly.
@@ -74,7 +75,7 @@
           </ul>
           <ul class="policy-text-list">
             <li class="policy-text-item">
-              3. Types of Cookies We Use Cookies can be "session" or
+              3. Types of Cookies We Use <br />Cookies can be "session" or
               "persistent." Session cookies expire when you close your browser,
               while persistent cookies remain stored until manually deleted or
               they reach expiration.
@@ -100,9 +101,10 @@
           </ul>
           <ul class="policy-text-list">
             <li class="policy-text-item">
-              4. Managing Cookies You can manage your cookie preferences through
-              your browser settings. If you disable cookies, some features of
-              the website may not function properly. 
+              4. Managing Cookies<br />
+              You can manage your cookie preferences through your browser
+              settings. If you disable cookies, some features of the website may
+              not function properly. 
               <ul class="policy-text-sublist">
                 <li class="policy-text-subitem">
                   <a
@@ -139,23 +141,24 @@
           </ul>
           <ul class="policy-text-list">
             <li class="policy-text-item">
-              5. Third-Party Cookies Some third-party services (e.g., Google
-              Analytics, advertising networks) may use cookies to collect
-              information. These cookies are subject to their own privacy
-              policies
+              5. Third-Party Cookies<br />
+              Some third-party services (e.g., Google Analytics, advertising
+              networks) may use cookies to collect information. These cookies
+              are subject to their own privacy policies
             </li>
           </ul>
           <ul class="policy-text-list">
             <li class="policy-text-item">
-              6. Changes to This Policy We may update this Cookies Policy
+              6. Changes to This Policy <br />We may update this Cookies Policy
               periodically. Significant changes will be communicated via the
               website.
             </li>
           </ul>
           <ul class="policy-text-list">
             <li class="policy-text-item">
-              7. Contact Us If you have any questions about this Cookies Policy,
-              you can contact us at
+              7. Contact Us<br />
+              If you have any questions about this Cookies Policy, you can
+              contact us at
               <a class="policy-list-link" href="mailto:info@rushpulse.online"
                 >info@rushpulse.online</a
               >.
