Update cookie policy text for clarity and improve link styles in privacy policy and terms conditions

--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -103,7 +103,7 @@
                 <li class="policy-text-subitem">
                   <a
                     class="policy-list-link"
-                    href="https://policies.google.com/privacy?hl=en-US"
+                    href="https://policies.google.com/privacy"
                     target="_blank"
                     rel="noopener noreferrer"
                     >Google Play Services</a
@@ -121,7 +121,7 @@
                 <li class="policy-text-subitem">
                   <a
                     class="policy-list-link"
-                    href="http://facebook.com/privacy/policy/"
+                    href="https://www.facebook.com/about/privacy/update/printable"
                     target="_blank"
                     rel="noopener noreferrer"
                     >Facebook</a
