--- a/src/cookies.html
+++ b/src/cookies.html
@@ -44,7 +44,7 @@
             This Cookies Policy explains what cookies are and how we use them.
             You should read this policy to understand what types of cookies we
             use, what data they collect, and how you can manage your
-            preferences.  Cookies do not typically contain personally
+            preferences. <br />Cookies do not typically contain personally
             identifiable information. However, in some cases, personal data that
             we store about you may be linked to information obtained from
             cookies. For more details, see our Privacy Policy.
@@ -81,20 +81,24 @@
               they reach expiration.
               <ul class="policy-text-sublist">
                 <li class="policy-text-subitem">
-                  Necessary Cookies Type: Session Cookies Purpose: Required for
-                  core website functions and security.
+                  Necessary Cookies <br />
+                  Type: Session Cookies <br />
+                  Purpose: Required for core website functions and security.
                 </li>
                 <li class="policy-text-subitem">
-                  Functional Cookies Type: Persistent Cookies Purpose: Remember
-                  user preferences (e.g., language, login details).
+                  Functional Cookies <br />
+                  Type: Persistent Cookies <br />Purpose: Remember user
+                  preferences (e.g., language, login details).
                 </li>
                 <li class="policy-text-subitem">
-                  Analytics Cookies Type: Persistent Cookies Purpose: Track user
-                  behavior and website performance using Google Analytics. 
+                  Analytics Cookies <br />Type: Persistent Cookies
+                  <br />Purpose: Track user behavior and website performance
+                  using Google Analytics.
                 </li>
                 <li class="policy-text-subitem">
-                  Advertising Cookies Type: Persistent Cookies Purpose: Show
-                  relevant ads based on your browsing behavior.
+                  Advertising Cookies <br />
+                  Type: Persistent Cookies <br />
+                  Purpose: Show relevant ads based on your browsing behavior.
                 </li>
               </ul>
             </li>
@@ -104,37 +108,35 @@
               4. Managing Cookies<br />
               You can manage your cookie preferences through your browser
               settings. If you disable cookies, some features of the website may
-              not function properly. 
+              not function properly.
               <ul class="policy-text-sublist">
                 <li class="policy-text-subitem">
                   <a
                     class="policy-list-link policy-list-link-cookies"
                     href="https://support.google.com/accounts/answer/32050"
-                    >Manage cookies in Chrome </a
-                  >
+                    >Manage cookies in Chrome
+                  </a>
                 </li>
                 <li class="policy-text-subitem">
                   <a
                     class="policy-list-link policy-list-link-cookies"
                     href="https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored"
-                    >Manage cookies in Firefox </a
-                  >
-                   
+                    >Manage cookies in Firefox
+                  </a>
                 </li>
                 <li class="policy-text-subitem">
                   <a
                     class="policy-list-link policy-list-link-cookies"
                     href="https://support.microsoft.com/kb/278835"
-                    >Manage cookies in Internet Explorer </a
-                  >
-                   
+                    >Manage cookies in Internet Explorer
+                  </a>
                 </li>
                 <li class="policy-text-subitem">
                   <a
                     class="policy-list-link policy-list-link-cookies"
                     href="https://support.apple.com/guide/safari/manage-cookies-and-website-data-sfri11471/mac"
-                    >MManage cookies in Safari </a
-                  >
+                    >Manage cookies in Safari
+                  </a>
                 </li>
               </ul>
             </li>
